[metadata]
name = alembic_clamp
description = Configurable wrapper around alembic (SQLAlchemy migration tool)
long_description = file: README.rst
author = Denis Otkidach
author_email = denis.otkidach@gmail.com
url = https://github.com/ods/alembic-clamp
license = MIT

[options]
packages =
    alembic_clamp
install_requires =
    alembic>=1.4.2
    sqlalchemy>=1.3.17
setup_requires =
    pytest-runner>=5.2
    setuptools_scm>=3.5.0
tests_require =
    pytest>=5.4.2
    pytest-cov>=2.8.1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts = --strict-markers -r aP --tb=native --cov
filterwarnings = error

[coverage:run]
branch = True
source =
    alembic_clamp

[coverage:report]
show_missing = True
